fix styled select boxes on ie/firefox

--- a/app/assets/stylesheets/components/forms/_form_controls.css.sass
+++ b/app/assets/stylesheets/components/forms/_form_controls.css.sass
@@ -131,7 +131,7 @@ $textarea-max-height: 400px
   @extend .flat-button
   padding: 0px
   select
-    width: 100%
+    width: 200%
     padding: 7.6px 12px
     margin: 0
     color: inherit
@@ -139,8 +139,6 @@ $textarea-max-height: 400px
     font-family: inherit
     border: none
     background: transparent
-    text-indent: 0.01px
-    text-overflow: ''
     +border-radius(0)
     -webkit-appearance: none
     -moz-appearance: none
